# MCP

./: .gitignore  README.md  gnews_mcp.py  main.py  pyproject.toml  requirements.txt
eval/: actual_labels.csv  test.py
eval/.deepeval/: .deepeval_telemetry.txt
gnews/: News.bru  bruno.json
test/: mcp_server.py  mcp_server_http.py  mcp_server_multiple_http.py  mcp_server_stdio.py
